Fixed contrast added home page
Fixed the contrast for some text and added a home page.

--- a/app/globals.css
+++ b/app/globals.css
@@ -4,7 +4,7 @@
 
 :root {
   --foreground-rgb: 0, 0, 0;
-  --background-start-rgb: 185, 185, 185;
+  --background-start-rgb: 160, 178, 221;
   --background-end-rgb: 255, 255, 255;
 }
 
